@@ -2,6 +2,7 @@
 
 	* Fix for backward compatibility of class tx_staticinfotables_div
 	* Update some copyright notices
+	* Follow-up fix for backward compatibility of class tx_staticinfotables_div
 
 2013-05-16  Stanislas Rolland  <typo3@sjbr.ca>
 
